--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -87,7 +87,7 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="settingIcon">
+    <style name="feedbackIcon">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">19dp</item>
@@ -115,5 +115,7 @@
         <item name="colorControlNormal">@color/grey</item>
         <item name="colorControlActivated">@color/grey</item>
     </style>
+
+    <style name="help_center">Help Center</style>
 
 </resources>
