--- a/app/src/main/res/layout/faq_layout_fragment.xml
+++ b/app/src/main/res/layout/faq_layout_fragment.xml
@@ -41,8 +41,8 @@
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:onClick="@{()->model.onBackButtonClicked()}"
+            android:padding="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/view"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/view"
