Fix next available task time display
- Bug was due to xml referring to method instead of observable field property and thus not refreshing
the value when it was changing.
- Fixed all fields in xml/model to make sure we always use the property names and not a method with identical name
- Fixed startDate validation in Task (initialized to null so validation check will work)

--- a/app/src/main/res/layout/earn_tab.xml
+++ b/app/src/main/res/layout/earn_tab.xml
@@ -153,7 +153,7 @@
             android:fontFamily="sans-serif-medium"
             android:letterSpacing="0.03"
             android:onClick="@{()->model.startTask()}"
-            android:text="@{model.isTaskStarted() ? @string/resume : @string/start_earn_kin}"
+            android:text="@{model.isTaskStarted ? @string/resume : @string/start_earn_kin}"
             android:textSize="16sp"
             android:visibility="@{model.getShouldShowTask}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -168,7 +168,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/task_icon_size"
             android:scaleType="centerInside"
-            android:visibility="@{model.getShouldShowTask}"
+            android:visibility="@{model.shouldShowTask}"
             app:layout_constraintBottom_toTopOf="@+id/bottom_delimiter"
             app:layout_constraintEnd_toStartOf="@+id/center_guide_line"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -180,7 +180,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/task_icon_size"
             android:scaleType="centerInside"
-            android:visibility="@{model.getShouldShowTask}"
+            android:visibility="@{model.shouldShowTask}"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintStart_toStartOf="@+id/center_guide_line"
             app:layout_constraintTop_toTopOf="@+id/amount_kin_icon"
@@ -195,7 +195,7 @@
             android:layout_marginStart="34dp"
             android:layout_marginEnd="34dp"
             android:background="#d7dce9"
-            android:visibility="@{model.getShouldShowTask}"
+            android:visibility="@{model.shouldShowTask}"
             app:layout_constraintBottom_toTopOf="@+id/amount_kin_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -214,7 +214,7 @@
             android:text="@{model.isQuiz ? @string/kin_reward_upto(model.kinReward) : @string/kin_reward(model.kinReward)}"
             android:textColor="#7884a5"
             android:textSize="16sp"
-            android:visibility="@{model.getShouldShowTask}"
+            android:visibility="@{model.shouldShowTask}"
             app:layout_constraintEnd_toEndOf="@+id/amount_kin_icon"
             app:layout_constraintStart_toStartOf="@+id/amount_kin_icon"
             app:layout_constraintTop_toBottomOf="@+id/amount_kin_icon"
@@ -230,7 +230,7 @@
             android:text="@{@string/min_to_complete(model.minToComplete)}"
             android:textColor="#7884a5"
             android:textSize="16sp"
-            android:visibility="@{model.getShouldShowTask}"
+            android:visibility="@{model.shouldShowTask}"
             app:layout_constraintEnd_toEndOf="@+id/timer_icon"
             app:layout_constraintStart_toStartOf="@+id/timer_icon"
             app:layout_constraintTop_toBottomOf="@+id/timer_icon"
@@ -246,7 +246,7 @@
             android:layout_marginStart="34dp"
             android:layout_marginEnd="34dp"
             android:background="#d7dce9"
-            android:visibility="@{model.getShouldShowTask}"
+            android:visibility="@{model.shouldShowTask}"
             app:layout_constraintBottom_toTopOf="@id/bottom_horizontal_guide_line"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -261,7 +261,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="#d7dce9"
-            android:visibility="@{model.getShouldShowTask}"
+            android:visibility="@{model.shouldShowTask}"
             app:layout_constraintBottom_toTopOf="@+id/bottom_delimiter"
             app:layout_constraintEnd_toStartOf="@id/bottom_delimiter"
             app:layout_constraintStart_toEndOf="@id/top_delimiter"
@@ -279,11 +279,11 @@
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal"
             android:lineSpacingExtra="5sp"
-            android:text="@{model.isAvailableTomorrow() ? @string/next_task_available_tomorrow : @string/next_task_available_on(model.nextAvailableDate())}"
+            android:text="@{model.isAvailableTomorrow ? @string/next_task_available_tomorrow : @string/next_task_available_on(model.nextAvailableDate)}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="#1693f3"
             android:textSize="22sp"
-            android:visibility="@{model.getShouldShowTaskNotAvailableYet()}"
+            android:visibility="@{model.shouldShowTaskNotAvailableYet}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -298,7 +298,7 @@
             android:layout_marginTop="86dp"
             android:scaleType="centerInside"
             android:src="@drawable/next_experience"
-            android:visibility="@{model.getShouldShowTaskNotAvailableYet}"
+            android:visibility="@{model.shouldShowTaskNotAvailableYet}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -320,7 +320,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
             android:textColor="#d7dce9"
             android:textSize="14sp"
-            android:visibility="@{model.getShouldShowTaskNotAvailableYet}"
+            android:visibility="@{model.shouldShowTaskNotAvailableYet}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
