Fix reward display when timeout is long
1. Will now only update balance/transaction list after waiting has
completed since the update resets onEarnTransactionCompleted which
is used as a signal to initiate the reward received animations

2. 'Your new balance' text should only be displayed after the reward
has been received.

--- a/app/src/main/res/layout/task_reward_fragment.xml
+++ b/app/src/main/res/layout/task_reward_fragment.xml
@@ -105,10 +105,12 @@
             android:text="@string/your_new_balance"
             android:textColor="#ffffff"
             android:textSize="16sp"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/balance_amount"/>
+            app:layout_constraintTop_toBottomOf="@+id/balance_amount"
+            app:visibilityOn="@{model.onTransactionComplete}"/>
 
         <TextView
             android:id="@+id/close_text"
