--- a/app/src/main/res/layout/possitive_dialog.xml
+++ b/app/src/main/res/layout/possitive_dialog.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/backup_illus_popup"
+        tools:src="@drawable/backup_illus_popup"
          />
 
     <TextView
