--- a/app/src/main/res/layout/earn_tab.xml
+++ b/app/src/main/res/layout/earn_tab.xml
@@ -24,16 +24,16 @@
 
         <TextView
             android:id="@+id/balance_text"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
             android:background="@android:color/transparent"
             android:fontFamily="sans-serif"
             android:gravity="center_vertical|start"
-            android:paddingLeft="30dp"
             android:text="@{model.balance}"
             android:textColor="@color/balance_text_color"
             android:textSize="24sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/balance"
             app:layout_constraintTop_toTopOf="@id/balance"
             tools:text="200"/>
@@ -42,10 +42,10 @@
             android:id="@+id/kin_currency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="7dp"
             android:background="@android:color/transparent"
             android:fontFamily="sans-serif"
             android:gravity="center|start"
-            android:paddingLeft="7dp"
             android:text="KIN"
             android:textColor="@color/balance_text_color"
             android:textSize="14sp"
@@ -84,8 +84,8 @@
             android:id="@+id/author_name"
             android:layout_width="0dp"
             android:layout_height="19dp"
-            android:layout_marginStart="32dp"
             android:layout_marginTop="10dp"
+            android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal"
@@ -104,8 +104,8 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
             android:layout_marginTop="12dp"
+            android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center_horizontal"
@@ -121,10 +121,11 @@
             tools:visibility="visible"/>
         <TextView
             android:id="@+id/subtitle"
+            android:textStyle="normal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
+            android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal"
@@ -133,7 +134,6 @@
             android:text="@{model.description}"
             android:textColor="#7884a5"
             android:textSize="16sp"
-            android:textStyle="normal"
             android:visibility="@{model.getShouldShowTask}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -141,29 +141,28 @@
             app:layout_constraintTop_toBottomOf="@+id/title"
             tools:text="some description"
             tools:visibility="visible"/>
-
         <TextView
             android:id="@+id/start_task_btn"
             style="@style/Button.Blue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
             android:layout_marginTop="34dp"
-            android:layout_marginEnd="60dp"
             android:layout_marginBottom="34dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
             android:fontFamily="sans-serif-medium"
             android:letterSpacing="0.03"
-            android:onClick="@{() -> model.retrieveTask()}"
-            android:text="@{model.isTaskLoading ? `` : (model.isTaskStarted ? @string/resume : @string/start_earn_kin)}"
+            android:onClick="@{()->model.startTask()}"
+            android:text="@{model.isTaskStarted ? @string/resume : @string/start_earn_kin}"
             android:textSize="16sp"
-            android:visibility="@{model.shouldShowTask}"
+            android:visibility="@{model.getShouldShowTask}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bottom_horizontal_guide_line"
-            tools:text=""
-            tools:visibility="visible" />
+            tools:text="@string/start_earn_kin"
+            tools:visibility="visible"/>
         <ImageView
             android:id="@+id/amount_kin_icon"
             android:layout_width="wrap_content"
@@ -192,9 +191,9 @@
             android:id="@+id/top_delimiter"
             android:layout_width="0dp"
             android:layout_height="1dp"
+            android:layout_marginBottom="14dp"
             android:layout_marginStart="34dp"
             android:layout_marginEnd="34dp"
-            android:layout_marginBottom="14dp"
             android:background="#d7dce9"
             android:visibility="@{model.shouldShowTask}"
             app:layout_constraintBottom_toTopOf="@+id/amount_kin_icon"
@@ -243,8 +242,8 @@
             android:id="@+id/bottom_delimiter"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginStart="34dp"
             android:layout_marginTop="10dp"
+            android:layout_marginStart="34dp"
             android:layout_marginEnd="34dp"
             android:background="#d7dce9"
             android:visibility="@{model.shouldShowTask}"
@@ -273,8 +272,8 @@
             android:id="@+id/next_task_availability_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
             android:layout_marginTop="58dp"
+            android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:background="@android:color/transparent"
             android:fontFamily="sans-serif"
@@ -310,8 +309,8 @@
             android:id="@+id/next_experience_subtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
             android:layout_marginTop="12dp"
+            android:layout_marginStart="48dp"
             android:layout_marginEnd="48dp"
             android:background="@android:color/transparent"
             android:fontFamily="sans-serif"
@@ -374,6 +373,7 @@
             tools:visibility="gone"/>
         <TextView
             android:id="@+id/no_tasks_title"
+            android:textStyle="normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -382,7 +382,6 @@
             android:text="@string/no_tasks_title"
             android:textColor="#7884a5"
             android:textSize="16sp"
-            android:textStyle="normal"
             android:visibility="@{model.shouldShowNoTask}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -391,10 +390,11 @@
             tools:visibility="gone"/>
         <TextView
             android:id="@+id/no_tasks_subtitle"
+            android:textStyle="normal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
             android:layout_marginTop="8dp"
+            android:layout_marginStart="48dp"
             android:layout_marginEnd="48dp"
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal"
@@ -402,25 +402,12 @@
             android:text="@string/no_tasks_subtitle"
             android:textColor="#a4acc2"
             android:textSize="14sp"
-            android:textStyle="normal"
             android:visibility="@{model.shouldShowNoTask}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/no_tasks_title"
             tools:visibility="gone"/>
-
-        <ProgressBar
-            android:id="@+id/task_loader"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_margin="5dp"
-            android:visibility="@{model.isTaskLoading}"
-            app:layout_constraintBottom_toBottomOf="@+id/start_task_btn"
-            app:layout_constraintEnd_toEndOf="@+id/start_task_btn"
-            app:layout_constraintStart_toStartOf="@+id/start_task_btn"
-            app:layout_constraintTop_toTopOf="@+id/start_task_btn" />
 
 
     </android.support.constraint.ConstraintLayout>
