--- a/app/src/main/res/layout/task_web_layout.xml
+++ b/app/src/main/res/layout/task_web_layout.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="model"
@@ -33,13 +31,13 @@
         </WebView>
 
         <ProgressBar
-            android:theme="@style/AppTheme.DarkAccent"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:theme="@style/AppTheme.Blue"
             android:visibility="@{model.loading}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/webview"/>
+            app:layout_constraintTop_toTopOf="@+id/webview" />
     </android.support.constraint.ConstraintLayout>
 </layout>
