--- a/app/src/main/res/layout/info_tab.xml
+++ b/app/src/main/res/layout/info_tab.xml
@@ -40,7 +40,7 @@
             android:lineSpacingExtra="5sp"
             android:onClick="@{model::openUpdate}"
             android:padding="16dp"
-            android:text="@{model.userRepository.isUpdateAvailable ? @string/up_to_date : @string/update_now}"
+            android:text="@{model.userRepository.isUpdateAvailable ? @string/update_now : @string/up_to_date}"
             android:textColor="@{model.userRepository.isUpdateAvailable ? @color/gray : @color/red_wrong}"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
